compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__bit_array_segment_conflicting_options_bit_array.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 70
expression: "case <<1>> { <<1:bits-bytes>> -> 1 }"
snapshot_kind: text
---
----- SOURCE CODE
case <<1>> { <<1:bits-bytes>> -> 1 }

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:23
  │
1 │ case <<1>> { <<1:bits-bytes>> -> 1 }
  │                       ^^^^^ This is an extra type specifier

Hint: This segment already has the type bits.
See: https://tour.gleam.run/data-types/bit-arrays/
